python/testData/inspections/AddParameter.py
def foo(a, *er):
  return <error descr="Unresolved reference 'test'">tes<caret>t</error>